git commit -m "commit"

--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <title>Landing Page for Software Engineer Rolf Nibotski</title>
 </head>
 <body>
+    <div class="header">
+        <div class="trademark">
+            <div class="icon">ICON</div>
+            <div class="name">Rolf Nibotski</div>
+        </div>
+        <div class="navigation">
+            <ul class="navigation-bar">
+                <li class="navigation-item"><a href="#">Home</a></li>
+                <li class="navigation-item"><a href="#">About Me</a></li>
+                <li class="navigation-item"><a href="#">Services</a></li>
+                <li class="navigation-item"><a href="#">Portfolio</a></li>
+            </ul>
+        </div>
+        <div class="contact"></div>
+    </div>
     <div class="background-picture">
+        <div class="navigation-bar">
+
+        </div>
         
     </div>
 
